[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/SetupSections/TeamSetupSection.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Widgets/PlusMinusWidget.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]

size = 18
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings", "font_data" ]

[sub_resource type="DynamicFont" id=2]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="TeamSetupSection" type="ColorRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 50.0
margin_right = 530.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Script" ]

[node name="TeamsBtn" type="CheckButton" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -17.0
margin_top = -10.0
margin_right = 128.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Teams"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts", "custom_fonts/font" ]

[node name="HowManyTeamsLbl" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 273.0
margin_top = -1.0
margin_right = 511.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "How Many Teams?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="NumOfTeams" parent="." instance=ExtResource( 3 )]
margin_left = 330.0
margin_top = 28.0
margin_right = 460.0
margin_bottom = 68.0

[connection signal="pressed" from="TeamsBtn" to="." method="_on_TeamsBtn_pressed" flags=3]
[connection signal="PMWidChanged" from="NumOfTeams" to="." method="_on_NumOfTeams_PMWidChanged" flags=3]
